--- a/app/Views/base.twig
+++ b/app/Views/base.twig
@@ -11,13 +11,12 @@
     {% endblock %}
 </head>
 
-<body>
-{% block topnav %}
-    <nav class="bg-gray-800">
-        <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
-            <div class="relative flex items-center justify-between h-16">
+<body class="bg-gray-800">
+{% block top %}
+    <nav class="bg-gray-800 flex flex-wrap pr-5">
+        <div class="md:w-4/6 px-3 my-3 ">
+            <div class="relative flex items-center justify-between h-16 ">
                 <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-
                 </div>
                 <div class="flex-1 flex items-center justify-center sm:items-stretch sm:justify-start">
                     <div class="flex-shrink-0 flex items-center">
@@ -25,24 +24,50 @@
                              alt="Stock-trade">
                     </div>
                     <div class="hidden sm:block sm:ml-6">
-                        <div class="flex space-x-4">
-                            <a href="/" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium"
-                               aria-current="page">Home</a>
-                            <a href="/buy"
-                               class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Buy</a>
-                            <a href="#"
-                               class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Profile</a>
+
+                        <div class="flex row-wrap">
+                            <form method="post" action="/buy">
+                                <input
+                                        class="text-sm appearance-none rounded  py-2 px-3 text-gray-700 bg-gray-200 leading-tight focus:outline-none focus:shadow-outline h-10"
+                                        name="symbol" type="text" placeholder="Enter stock symbol" required/>
+                                <input
+                                        class="text-sm bg-gray-200 appearance-none rounded  py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
+                                        name="amount"
+                                        type="text"
+                                        placeholder="Enter amount" required/>
+
+                                <button
+                                        class=" bg-green-700 hover:bg-green-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
+                                        type="submit" name="buy">
+                                    Buy
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
 
             </div>
         </div>
+
+        <div class="md:w-2/6 br-3 my-3 flex flex-wrap-mx-4-mb-4 justify content:center text-center rounded  bg-yellow-600">
+
+            <div class="md:w-1/3 pl-3 my-2">
+                <p>Total paid</p>
+            </div>
+            <div class="md:w-1/3 my-2">
+                <p>Total value</p>
+                <p></p>
+            </div>
+            <div class="md:w-1/3 my-2 ">
+                <p>Money available</p>
+                <p class="font-bold">{{ wallet }}$</p>
+            </div>
+        </div>
     </nav>
+
 {% endblock %}
 
-{% block content %}
-{% endblock %}
+{% block profile %} {% endblock %}
 
 </body>
 </html>
