--- a/app/Views/PortfolioView.twig
+++ b/app/Views/PortfolioView.twig
@@ -5,6 +5,7 @@
     <div class="container mx-auto px-2">
         <form method="post">
             <section class="py-10 px-20 bg-gray-600">
+                <p class="text-5xl text-center text-gray-700 font-bold">STOCK PORTFOLIO</p>
                 <div class="flex flex-wrap -mx-4 -mb-4">
 
                     {% set TOTAL = 200 %}
